objects/WT_Weekly_Referral_Metric__c.object
<CustomObject>
    <fields>
        <fullName>WT_Line_Of_Business__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Line Of Business</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Referral_Qualified_By_LOB__c</fullName>
        <label>Number Of Referral qualified By LOB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Referral_Qualified_Converted_By_LOB__c</fullName>
        <label>No Of Referral qualified-ConvertedBy LOB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Referral_Submitted_By_LOB__c</fullName>
        <label>Number of Referral Submitted by LOB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Weekly_Metric__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Weekly Metric</label>
        <referenceTo>WT_Weekly_Metric__c</referenceTo>
        <relationshipLabel>Weekly Referral Metrics</relationshipLabel>
        <relationshipName>WT_Weekly_Referral_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Weekly Referral Metric</label>
    <nameField>
        <displayFormat>WR-{000}</displayFormat>
        <label>Weekly Referral Metric Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly Referral Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>